--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,49 @@
-Hey Jenkins
+pipeline {
+New_branch
+    agent any 
+    stages {
+        stage('Build') { 
+            steps {
+                echo 'test'
+            }
+        }
+        stage('Test') { 
+            steps {
+                echo 'printt'
+            }
+        }
+        stage('Deploy') { 
+            steps {
+                echo 'jenkin'
+
+    agent any
+
+    stages {
+      Azeem_branch
+        stage('Build') {
+            steps {
+                echo 'Building..'
+            }
+        }
+        stage('Test') {
+            steps {
+                echo 'Testing..'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying....'
+        stage('Deploy') {
+            when {
+              expression {
+                currentBuild.result == null || currentBuild.result == 'SUCCESS' 
+              }
+            }
+            steps {
+                sh 'make publish'
+master
+master
+            }
+        }
+    }
+}
